# Minecraft

./: .gitignore  .gitmodules  CMakeLists.txt
lib/noise/: CMakeLists.txt
res/: makefile
src/: main.cpp
src/gfx/: util.hpp
